--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ let title = 'My Astro Site';
 		<header>
 			<div>
 				<Logo width={60} height={80} />
-				<Icon icon="arrow-down" />
+				<Icon class="icon" icon="arrow-down" />
 				<h1>Welcome to <a href="https://astro.build/">Astro</a></h1>
 			</div>
 		</header>
