--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,12 +12,12 @@
 }
 
 body {
+	background-image: svg-load('arrow-down.svg', stroke=tomato, width=20, height=20, transform=rotate(-45));
 	padding: 4rem 2rem;
 	width: 100%;
 	min-height: 100vh;
 	display: grid;
 	justify-content: center;
-	background: #f9fafb;
 	color: #111827;
 }
 
